# infosec

./: .gitignore  README.md  exploit.py  index.php  nmap.sh  reconmode.sh  sample.dtd  server.py  shell.php
HackTheBox/htb-ai-red-teamer/: pyproject.toml
HackTheBox/htb-ai-red-teamer/AI_data_attacks/label_flipping/: setup.py
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/foundations/datapreprocessing/: preprocessing.py
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/foundations/datasets/: datasetloading_ex.py
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/foundations/datatransformation/: log1p_transform_ex.py  onehotencoding_ex.py
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/foundations/pythonlibaries_section/: dataloading_preprocessing_ex.py  savingandloading_ex.py  torch_ex1.py  torch_ex2.py  torch_ex3.py  (+3 more)
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/malware_classification/: .gitignore  submission_model.py  training_model.py
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/network_anomaly_detection/: anomaly_detection_model.py  network_model.py  training_model.py
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/skills_assessment/: assessment.py
HackTheBox/htb-ai-red-teamer/applications_of_AI_infosec/spam-classification/: spam_classification.py  spam_detection_model.joblib  training_model.py
HackTheBox/htb-ai-red-teamer/datapreprocessing/: imputation.py
HackTheBox/htb-ai-red-teamer/red_teaming_AI/redteam_code/: main.py  poison-student.csv  poison.csv  test.csv  training_data.csv
(+156 files in other folders)
