[project]
name = "ai-red-teamer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "tokenizers (>=0.21.0,<0.22.0)",
    "accelerate (>=1.4.0,<2.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "optimum (>=1.24.0,<2.0.0)",
    "huggingface-hub (>=0.29.2,<0.30.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "category-encoders (>=2.8.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "split-folders (>=0.5.1,<0.6.0)"
]

[tool.poetry]
packages = [{include = "ai_red_teamer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
